2022-07-27  Sylvain Noiry  <sylvain.noiry@grenoble-inp.org>

	* target-def.h: add emission of 16-bytes unaligned integer 
	* config/gcn/gcn.cc: add emission of 16-bytes aligned integer

2022-07-27  Sylvain Noiry  <sylvain.noiry@grenoble-inp.org>

	* gcc/config/riscv/riscv.opt: add MASK_128BIT flag and rv128 ABIs (LLP128/LLP128F/LLP128D)
	* common/config/riscv/riscv-common.cc: add rv128 recognition and MASK_128BIT flag setup
	* gcc/config/riscv/riscv-opts.h: add rv128 ABIs in riscv_abi_type enum definition
	* gcc/config/riscv/arch-canonicalize: add rv128 extensions parsing

2022-07-26  Sylvain Noiry  <sylvain.noiry@grenoble-inp.org>

	* config.gcc: prepare support for RISC-V rv128 little endian target

2022-07-21  Sam Feifer  <sfeifer@redhat.com>

	PR tree-optimization/94920
	* match.pd (x >= 0 ? x : 0) + (x <= 0 ? -x : 0): New simplification.
	           (x <= 0 ? -x : 0): New simplification.

2022-07-21  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>

	Revert:
	2022-07-19  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>

	* tree-ssa-forwprop.cc (simplify_permutation): Use lhs type
	instead of TREE_TYPE (arg0) as result type in folding VEC_PERM_EXPR.

2022-07-21  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/106379
	* match.pd (~(a ^ b) -> a == b): New pattern.

2022-07-21  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/106378
	* tree-ssa-dse.cc (initialize_ao_ref_for_dse): Handle
	LEN_STORE, add mode to initialize a may-def and handle
	MASK_STORE that way.
	(dse_optimize_stmt): Query may-defs.  Handle internal
	functions LEN_STORE and MASK_STORE similar to how
	we handle memory builtins but without byte tracking.

2022-07-21  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/106365
	* tree-ssa-sccvn.cc (pd_data::rhs_off): New field determining
	the offset to start encoding of RHS from.
	(vn_walk_cb_data::vn_walk_cb_data): Initialize it.
	(vn_walk_cb_data::push_partial_def): Allow the first partial